@@ -1,3 +1,8 @@
+2007-06-25   Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: Clean up signedness warnings
+	* sonix.c:   ditto
+
+
 2007-05-05   Theodore Kilgore <kilgota@auburn.edu>
 
 	* library.c: Added Mini Shotz ms-350. Thanks to 
